--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;FREEIMAGE_LIB;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_BREAK_ON_WARNING"
+				PreprocessorDefinitions="WIN32;_DEBUG;FREEIMAGE_LIB;ZE_ZINEK_ENGINE;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_BREAK_ON_WARNING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -112,7 +112,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;FREEIMAGE_LIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;FREEIMAGE_LIB;ZE_ZINEK_ENGINE"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				WarningLevel="2"
@@ -179,7 +179,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;FREEIMAGE_LIB;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR"
+				PreprocessorDefinitions="WIN32;_DEBUG;FREEIMAGE_LIB;ZE_ZINEK_ENGINE;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -249,7 +249,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;FREEIMAGE_LIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;FREEIMAGE_LIB;ZE_ZINEK_ENGINE"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="2"
