CHG: ZEMap sub-system has been revised. ADD: ZEMap abstract class (interface) added to ZEMap system. ADD: ZEPortalMap, ZEPortalMapPortal, ZEPortalMapDoor components added to ZEMap subsystem. CHG: ZEMap file format has been changed. DoorCount attribute has added to head chunk and Entity count has removed from head chunk. Portal Door's are now discreet entities in ZEMap file.
svn path=/branches/v0.05.02-MapRevision/; revision=182

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -703,11 +703,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
@@ -2027,11 +2027,31 @@
 				RelativePath=".\Source\Map\Map.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Source\Map\MapResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\MapResource.h"
+				>
+			</File>
 			<Filter
 				Name="PortalMap"
 				>
 				<File
+					RelativePath=".\Source\Map\PortalMap\PortalMap.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\Map\PortalMap\PortalMap.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Map\PortalMap\PortalMapDoor.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Map\PortalMap\PortalMapDoor.h"
 					>
 				</File>
 				<File
@@ -2039,11 +2059,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Map\PortalMap\PortalMapPortal.h"
+					RelativePath=".\Source\Map\PortalMap\PortalMapPortal.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Map\PortalMap\PortalMapPortalDoor.h"
+					RelativePath=".\Source\Map\PortalMap\PortalMapPortal.h"
 					>
 				</File>
 				<File
