--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -703,11 +703,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
@@ -1093,6 +1093,14 @@
 						Outputs="$(InputPath).zpp"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Source\GameInterface\Trigger.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\GameInterface\Trigger.h"
+				>
 			</File>
 		</Filter>
 		<Filter
