--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1254"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Zinek Engine"
 	ProjectGUID="{9CC3BAC9-51BE-4174-B3EC-F669BED2380D}"
 	RootNamespace="ComponentDevelopment"
@@ -561,6 +561,10 @@
 			</File>
 			<File
 				RelativePath=".\Source\Graphics\VertexTypes.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ViewPort.h"
 				>
 			</File>
 			<File
