--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1254"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Zinek Engine"
 	ProjectGUID="{9CC3BAC9-51BE-4174-B3EC-F669BED2380D}"
 	RootNamespace="ComponentDevelopment"
@@ -953,11 +953,11 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\Source\Game\Component.cpp"
+				RelativePath=".\Source\Game\CompoundEntity.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Game\Component.h"
+				RelativePath=".\Source\Game\CompoundEntity.h"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -995,12 +995,21 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\Source\Game\EntityProvider.cpp"
+				RelativePath=".\Source\Game\EntityComponent.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Game\EntityProvider.h"
+				RelativePath=".\Source\Game\EntityComponent.h"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+						Outputs="$(InputPath).zpp"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\Source\Game\Game.cpp"
@@ -1072,14 +1081,6 @@
 						Outputs="$(InputPath).zpp"
 					/>
 				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\Source\Game\Portal.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Game\Portal.h"
-				>
 			</File>
 			<File
 				RelativePath=".\Source\Game\Scene.cpp"
@@ -2185,18 +2186,6 @@
 			</File>
 			<File
 				RelativePath=".\Source\Core\WindowResource.rc"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="My Inspector Results"
-			>
-			<File
-				RelativePath=".\My Inspector Results\r003mi3\r003mi3.insp"
-				>
-			</File>
-			<File
-				RelativePath=".\My Inspector Results\r004mi3\r004mi3.insp"
 				>
 			</File>
 		</Filter>
