--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1254"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Zinek Engine"
 	ProjectGUID="{9CC3BAC9-51BE-4174-B3EC-F669BED2380D}"
 	RootNamespace="ComponentDevelopment"
@@ -354,6 +354,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Graphics\Direct3D9\HDR.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Graphics\IndexedPolygon.h"
 				>
 			</File>
@@ -703,11 +707,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
@@ -833,10 +837,6 @@
 						RelativePath=".\Source\Graphics\Direct3D9\PostProcessor\D3D9PPScreenOutputNode.h"
 						>
 					</File>
-				</Filter>
-				<Filter
-					Name="FixedMaterial"
-					>
 				</Filter>
 			</Filter>
 			<Filter
@@ -964,7 +964,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 						Outputs="$(InputPath).zpp"
 					/>
 				</FileConfiguration>
