--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1254"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Zinek Engine"
 	ProjectGUID="{9CC3BAC9-51BE-4174-B3EC-F669BED2380D}"
 	RootNamespace="ComponentDevelopment"
@@ -354,10 +354,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Graphics\Direct3D9\HDR.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\Source\Graphics\IndexedPolygon.h"
 				>
 			</File>
@@ -707,11 +703,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
@@ -728,6 +724,10 @@
 				</File>
 				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9VertexDeclaration.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\HDR.cpp"
 					>
 				</File>
 				<Filter
@@ -953,6 +953,23 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\Game\Component.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Game\Component.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;"
+						Outputs="$(InputPath).zpp"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\Source\Game\CompoundEntity.cpp"
 				>
 			</File>
@@ -983,23 +1000,6 @@
 			</File>
 			<File
 				RelativePath=".\Source\Game\Entity.h"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
-						Outputs="$(InputPath).zpp"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\Source\Game\EntityComponent.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Game\EntityComponent.h"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
