svn path=/branches/v0.05.03/; revision=211

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -742,6 +742,14 @@
 						>
 					</File>
 					<File
+						RelativePath=".\RunDir\resources\shaders\FixedMaterial.hlsl"
+						>
+					</File>
+					<File
+						RelativePath=".\RunDir\resources\shaders\HDRProcessor.hlsl"
+						>
+					</File>
+					<File
 						RelativePath=".\RunDir\resources\shaders\OmniProjectiveLight.ps"
 						>
 					</File>
