--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -671,6 +671,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9SSAOProcessor.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture2D.cpp"
 					>
 				</File>
@@ -707,11 +711,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
+					RelativePath=".\Source\Graphics\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
@@ -803,6 +807,10 @@
 					</File>
 					<File
 						RelativePath=".\RunDir\resources\shaders\SkyBox.vs"
+						>
+					</File>
+					<File
+						RelativePath=".\RunDir\resources\shaders\SSOAProcessor.hlsl"
 						>
 					</File>
 					<File
